# Audio-Transcriber

./: .env.example  .gitignore  README.md  TESTING_SUMMARY.md  critic.md  pyproject.toml  pytest.ini  requirements.txt
examples/: example_usage.py
src/transcribe_audio/cli/: transcribe_cli.py
src/transcribe_audio/config/: __init__.py
src/transcribe_audio/core/: language_detection.py
tests/: README.md  __init__.py  conftest.py
tests/test_cli/: __init__.py  test_dry_run.py  test_transcribe_cli.py
tests/test_config/: test_config_helpers.py  test_transcription_config.py
tests/test_core/: __init__.py  test_language_detection.py  test_language_detection_mocked.py  test_transcription.py  test_validation.py
tests/test_logging_utils/: __init__.py  test_logging_config.py
transcribe_audio/: README.md  __init__.py  example_usage.py
transcribe_audio/cli/: transcribe_cli.py
transcribe_audio/config/: transcription_config.py
transcribe_audio/core/: language_detection.py  transcription.py
transcribe_audio/src/: __init__.py  input.m4a
transcribe_audio/src/cli/: transcribe_cli.py
transcribe_audio/src/config/: transcription_config.py
transcribe_audio/src/core/: __init__.py  language_detection.py  transcription.py
